fix classes